# rubixed

./: .gitignore  CMakeLists.txt  Makefile  README.md  anim.c  anim.h  cube.c  cube.h  draw.c  draw.h  main.c  scramble.c  scramble.h
.github/workflows/: release.yml
app/: app.c  app.h  app_modes.c  app_modes.h  app_ui.c  app_ui.h  theme.c  theme.h  utils.c  utils.h
app/utils/: projection.c  projection.h  stats.c  stats.h  table.c  table.h  utils.c  utils.h
camera/: camera.c  camera.h
cube/: anim.c  anim.h  cube.c  cube.h  draw.c  draw.h
scramble/: scramble.c  scramble.h  scramble_engine.c  scramble_engine.h
solver/: solver.c  solver.h
storage/: log.c  log.h
timer/: timer.c  timer.h
ui/: ui.c  ui.h
